--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,10 @@ name: 'Terraform GitHub Actions'
 on:
   push:
     branches:
-      - main
+      - terraform
   pull_request:
+    branches:
+      - main
 
 jobs:
   terraform:
