--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,10 @@ jobs:
         id: init
         run: terraform init
 
+      - name: 'Terraform  Validate'
+        id: validate
+        run: terraform init
+
       # - name: 'Terraform Validate'
       #   id: validate
       #   run: terraform validate
