added gcp compute engine

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,6 @@ jobs:
         id: init
         run: terraform init
 
-      # - name: 'Terraform Validate'
-      #   id: validate
-      #   run: terraform validate
+      - name: 'Terraform Validate'
+        id: validate
+        run: terraform validate
